[gd_scene load_steps=12 format=3 uid="uid://b46kanoqam1fw"]

[ext_resource type="PackedScene" uid="uid://brdb2u3kbypcy" path="res://src/assets/A3/CombinationLock.glb" id="1_tin3a"]
[ext_resource type="Script" path="res://src/assets/A3/CombinationLock.gd" id="2_dlx3i"]
[ext_resource type="PackedScene" uid="uid://di3dyh85gmqir" path="res://src/assets/A3/CombinationLockWheel.tscn" id="2_o44rh"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/interactable_area.gd" id="4_cllid"]

[sub_resource type="Animation" id="Animation_qs1f7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hoop metal lock_001:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.7, 1.67, 0)]
}

[sub_resource type="Animation" id="Animation_r8ap5"]
resource_name = "open_lock"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hoop metal lock_001:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.7, 1.67, 0), Vector3(-1.7, 3.32222, 0)]
}

[sub_resource type="Animation" id="Animation_25af7"]
resource_name = "open_lock_fail"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hoop metal lock_001:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.7, 1.67, 0), Vector3(-1.7, 1.86385, 0), Vector3(-1.7, 1.67, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7mo1r"]
_data = {
"RESET": SubResource("Animation_qs1f7"),
"open_lock": SubResource("Animation_r8ap5"),
"open_lock_fail": SubResource("Animation_25af7")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_646aq"]
height = 1.0
radius = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_76sh2"]
albedo_color = Color(0.239216, 0.239216, 0.239216, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_na3br"]
material = SubResource("StandardMaterial3D_76sh2")
top_radius = 0.25
bottom_radius = 0.25
height = 1.0

[node name="CombinationLockInterface" instance=ExtResource("1_tin3a")]
script = ExtResource("2_dlx3i")
code = "1234"

[node name="hoop metal lock" parent="." index="0"]
transform = Transform3D(-1.44635e-08, 0, 0.330886, 0, 0.330886, 0, -0.330886, 0, -1.44635e-08, -1.7, 1.67, 0)

[node name="hoop metal lock_001" parent="." index="1"]
transform = Transform3D(-1.44635e-08, 0, 0.330886, 0, 0.330886, 0, -0.330886, 0, -1.44635e-08, -1.7, 1.67, 0)

[node name="CombinationLock Wheel" parent="." index="2" instance=ExtResource("2_o44rh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.771014, 0, 0)

[node name="CombinationLock Wheel2" parent="." index="3" instance=ExtResource("2_o44rh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.154202, 0, 0)

[node name="CombinationLock Wheel3" parent="." index="4" instance=ExtResource("2_o44rh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.462609, 0, 0)

[node name="CombinationLock Wheel4" parent="." index="5" instance=ExtResource("2_o44rh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.07942, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
libraries = {
"": SubResource("AnimationLibrary_7mo1r")
}

[node name="XRToolsInteractableArea" type="Area3D" parent="." index="7"]
collision_layer = 5242881
script = ExtResource("4_cllid")

[node name="CollisionShape3D" type="CollisionShape3D" parent="XRToolsInteractableArea" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.83654, 0.0357929, 0.610893)
shape = SubResource("CylinderShape3D_646aq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="XRToolsInteractableArea" index="1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.83654, 0.0357929, 0.610893)
mesh = SubResource("CylinderMesh_na3br")
skeleton = NodePath("../..")

[connection signal="pointer_event" from="XRToolsInteractableArea" to="." method="_on_xr_tools_interactable_area_pointer_event"]
